# libreoffice-modern-code-editing-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/hello_world/: README.md  config.json  hello_world.odt  hello_world.py
src/lib_o_con_2021/: config.json  lib_o_con_2021.ods  lib_o_con_2021_calc.py
tests/: conftest.py  test_hello_world.py
